--- a/Business Location Problem.ipynb
+++ b/Business Location Problem.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Almost every business depends on location. At first location has an immediate effect on fixed costs and it can also be very important for variable earnings. In this problem it will be chosen the best locations for a Psychology Clinic. The main criterias adopted are the relation between some variables such as the amount of restaurants, clinics and hospitals, and number of results of 'psy' results in Foursquare database."
+    "Almost every business depends on location. At first, the location has an immediate effect on fixed costs and it can also be very important for variable earnings. In this problem, it will be chosen as the best location for a Psychology Clinic. The main criteria adopted are the relation between some variables such as the number of restaurants, clinics and hospitals, and the number of results of 'psy' results in the Foursquare database."
    ]
   },
   {
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The customer C is a psychologist who is also owner of a clinic of several psychology in New York. C wants to know what areas of New York are good to install your clinics. Right now C has only one clinic in Manhatan but C wants to open new clinics in other regions too."
+    "Customer C is a psychologist who is also owner of several clinics of psychology in New York. C wants to know what areas of New York are good to install your clinics. Right now C has only one clinic in Manhattan but C wants to open new clinics in other regions too."
    ]
   },
   {
@@ -48,9 +48,9 @@
    "source": [
     "C intends to scale your business and also to dilute some fixed costs by using the same client target for all your clinics in New York.\n",
     "\n",
-    "C intends to use similar as possible furniture, paints and customer's psychology challengers. C believes that beyond one-by-one therapy, group therapy is also a great tool to provide your clients better health and quality, so it is interesting deal with clients of similar backgrounds and interests.\n",
+    "C intends to use similar as possible furniture, paints and customer psychology challengers. C believes that beyond one-by-one therapy, group therapy is also a great tool to provide your clients with better health and quality, so it is interesting to deal with clients of similar backgrounds and interests.\n",
     "\n",
-    "In C experience as clinical psychology there is a strong correlation between customer psychology profile and house/work neighborhood area. It's known by client experience that Manhathan is a great place but frequently over too overpriced. So, the client want to know other areas that are similar to Manhatan that should be also investigated."
+    "In C experience as clinical psychology, there is a strong correlation between customer psychology profile and house/work neighborhood area. It's known by the client experience that Manhattan is a great place but frequently over too overpriced. So, the client wants to know other areas that are similar to Manhattan that should be also investigated."
    ]
   },
   {
@@ -64,10 +64,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "C needs customer clusterization. As C are preatty sure about psychology profile and neighborhood, the first approach is definatelly try clusterize neighboords in New York. \n",
+    "C needs customer clusterization. As C is pretty sure about psychology profile and neighborhood, the first approach is definitely to try cluster neighbors in New York. \n",
     "\n",
-    "It's necessary more information about his actual clinic in Manhatan: \n",
-    " - C said in his actual clinic there are a lot of psychologist clinics, hospitals and restaurants: it should be examinated as evidences of good places;\n",
+    "It's necessary more information about his actual clinic in Manhattan: \n",
+    " - C said in his actual clinic there are a lot of psychologist clinics, hospitals, and restaurants: it should be examined as evidence of good places;\n",
     " - it is supposed that the correlation is strong between place and psychological profile;\n"
    ]
   },
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It will be used data from Foursquare API. The steps admited to solve the clusterization are:\n",
+    "It will be used data from Foursquare API. The steps admitted to solving the clusterization are:\n",
     "\n",
     " - Read New York Json file;\n",
     " - Add Latitude and Longitude information by Borough and Neighborhood;\n",
@@ -100,9 +100,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At first k-means will be used to clusterize regions of New York. It will be observed a strict radius to minize incidence of overpose of results for diferent searchs.\n",
+    "At first, k-means will be used to cluster regions of New York. It will be observed a strict radius to minimize the incidence of the same results for different searches.\n",
     "\n",
-    "In case of no correlation found by the criteria pointed by C, another database will be included to support the required information."
+    "In the case of no correlation found by the criteria pointed by C, another database will be included to support the required information."
    ]
   },
   {
