--- a/Business Location Problem.ipynb
+++ b/Business Location Problem.ipynb
@@ -4,6 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Capstone Project - How to choose a place to start a Psychology Clinic\n",
+    "### Applied Data Science Capstone by IBM/Coursera"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of contents\n",
+    "* [Introduction: Business Problem](#introduction)\n",
+    "* [Data](#data)\n",
+    "* [Methodology](#methodology)\n",
+    "* [Analysis](#analysis)\n",
+    "* [Results and Discussion](#results)\n",
+    "* [Conclusion](#conclusion)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Introduction"
    ]
   },
@@ -25,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Customer"
+    "### Customer"
    ]
   },
   {
@@ -39,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Business Problem"
+    "### Business Problem"
    ]
   },
   {
@@ -57,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problem Solution Framework"
+    "# Methodology: Problem Solution Framework"
    ]
   },
   {
@@ -77,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Requeriments and Approach"
+    "### Data Requeriments and Approach"
    ]
   },
   {
@@ -98,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problem Solving"
+    "# Analysis: Problem Solving"
    ]
   },
   {
@@ -4034,7 +4055,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rent info from Open Data New York: \n",
+    "### Rent info from Open Data New York: \n",
     "\n",
     "https://data.cityofnewyork.us/City-Government/DOF-Condominium-Comparable-Rental-Income-in-NYC/9ck6-2jew\n"
    ]
@@ -4597,6 +4618,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results and Discussion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 243,
    "metadata": {},
@@ -4874,6 +4902,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Discussion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 299,
    "metadata": {},
@@ -4970,29 +5005,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 285,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "36.17042020603649"
-     },
-     "metadata": {},
-     "execution_count": 285
-    }
-   ],
    "source": [
-    "prop[(prop['Cluster'] == 1) | (prop['Cluster'] == 2) | (prop['Cluster'] == 4) | (prop['Cluster'] == 5) & (prop['Borough'] == 'Manhattan')].Rent_per_SqFt.mean()\n",
-    ""
+    "It is expected that the cluster of Manhattan would be made all by Manhattan, but not only by it. Perhaps the criteria demanded by C was biased, but it matters that the closest from Manhattan was some Neighborhoods of Bronx, Brooklyn and Queens.\n",
+    "\n",
+    "My recommendation for C is definately stay in Manhantan. Pick a neighborhood far from your actual clinic and give preferences for properties of Cluster 2. It is important to bold that Manhattan is usually way more expensive than other. So if some frontier neighborhood of Manhantan was interesting, I would recommend try some frontier neighborhood in other Borough.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Of course a lot can be done further... it all depends on costs restrictions, maybe add SqFt requirements of C, maximize distance between actual clinics to the new one, et coetera... but everything needs an end.\n",
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Of course a lot can be done further... it all depends on costs restrictions, maybe also add SqFt requirements of C, or even maximize distance between actual clinics to the new one, et coetera... but everything needs an end. \n",
+    "\n",
+    "The Course of IBM Data Science is awesome! Thank you all!\n",
     "\n",
     "That's all folks.\n",
     "\n",
